--- a/templates/singlePage.html
+++ b/templates/singlePage.html
@@ -20,7 +20,7 @@
                 <li class="nav__item"><a href="/follow/" class="nav__link link">Мои подписки</a></li>
                 <li class="nav__item"><a href="/newrecipe/" class="nav__link link">Создать рецепт</a></li>
                 <li class="nav__item"><a href="/favorite/" class="nav__link link">Избранное</a></li>
-                <li class="nav__item"><a href="/shop/" class="nav__link link">Список покупок</a><span class="badge badge_style_blue nav__badge" id="counter">{{ count}}</span></li>
+                <li class="nav__item"><a href="/shop/" class="nav__link link">Список покупок</a><span class="badge badge_style_blue nav__badge" id="counter">{{ cnt}}</span></li>
             </ul>
             <ul class="nav__items list">
                 <li class="nav__item"><a href="#" class="nav__link link">Изменить пароль</a></li>
