--- a/templates/favorite.html
+++ b/templates/favorite.html
@@ -16,14 +16,14 @@
         <div class="nav__container container">
             <ul class="nav__items list">
                 <li class="nav__item"><a href="/" class="nav__link link">Рецепты</a></li>
-                <li class="nav__item"><a href="/follow/" class="nav__link link">Мои подписки</a></li>
-                <li class="nav__item"><a href="/newrecipe/" class="nav__link link">Создать рецепт</a></li>
+                <li class="nav__item"><a href="{% url 'follow' %}" class="nav__link link">Мои подписки</a></li>
+                <li class="nav__item"><a href="{% url 'newrecipe' %}" class="nav__link link">Создать рецепт</a></li>
                 <li class="nav__item nav__item_active"><a href="#" class="nav__link link">Избранное</a></li>
-                <li class="nav__item"><a href="/shop/" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">{{cnt}}</span></li>
+                <li class="nav__item"><a href="{% url 'shop' %}" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">{{cnt}}</span></li>
             </ul>
             <ul class="nav__items list">
                 <li class="nav__item"><a href="{% url 'password_change' %}" class="nav__link link">Изменить пароль</a></li>
-                <li class="nav__item"><a href="/accounts/logout/" class="nav__link link">Выход</a></li>
+                <li class="nav__item"><a href="{% url 'logout' %}" class="nav__link link">Выход</a></li>
             </ul>
         </div>
     </nav>
